changed junit task for acceptance test
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2391 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -572,7 +572,7 @@
     	<junit fork="yes" haltonfailure="yes" showoutput="on">
     		<classpath>
     			<pathelement path="${instrumented.bindir}"/>
-    			<path refid="testing.classpath"/>
+    			<path refid="acceptance.classpath"/>
     		</classpath>
     		<formatter type="xml"/>
     		<formatter type="plain" usefile="false"/>
