make dir for test-report
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@2392 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -504,6 +504,8 @@
 		<!-- folder for all other derived/compiled files -->
 		<mkdir dir="${bin.dir}"/>
 		
+		<mkdir dir="${test-report.dir}"/>
+		
 		<copy file="${test-src.dir}/${selenium.properties}" todir="${bin.dir}"/>
 		
 	</target>
