--- a/ivy.xml
+++ b/ivy.xml
@@ -28,8 +28,10 @@
 		
 
 		<!-- DataNucleus -->
-		<dependency org="org.datanucleus" name="datanucleus-enhancer" rev="3.0.1" conf="compile->default" />
-		<dependency org="org.datanucleus" name="datanucleus-rdbms" rev="3.0.8" conf="*->default,provided" />
+		<dependency org="org.datanucleus" name="datanucleus-enhancer" rev="[3.0.1,3.1[" conf="compile->default" />
+		<dependency org="org.datanucleus" name="datanucleus-rdbms" rev="[3.0.1,3.1[" conf="*->default,provided">
+			
+		</dependency>
 
 		<!-- Apache Derby -->
 		<dependency org="org.apache.derby" name="derby" rev="10.6.2.1" conf="*->default" />
