--- a/test-src/selenium.properties
+++ b/test-src/selenium.properties
@@ -1,6 +1,6 @@
 Selenium.WebApp.Host=timadorus-staging.informatik.haw-hamburg.de
 Selenium.WebApp.Port=8080
-Selenium.WebApp.RootServer=http://timadorus-staging.informatik.haw-hamburg.de:8080/webapp/
+Selenium.WebApp.RootServer=http://timadorus-staging.informatik.haw-hamburg.de:8080/
 Selenium.WebApp.RootSite=TimadorusWebApp.html
 Selenium.WebApp.Root=${Selenium.WebApp.RootServer}${Selenium.WebApp.RootSite}
 Selenium.GridServer.Host=timadorus-sel-worker-ubuntu.informatik.haw-hamburg.de
