--- a/ivy.xml
+++ b/ivy.xml
@@ -29,9 +29,7 @@
 
 		<!-- DataNucleus -->
 		<dependency org="org.datanucleus" name="datanucleus-enhancer" rev="[3.0.1,3.1[" conf="compile->default" />
-		<dependency org="org.datanucleus" name="datanucleus-rdbms" rev="[3.0.1,3.1[" conf="*->default,provided">
-			
-		</dependency>
+		<dependency org="org.datanucleus" name="datanucleus-rdbms" rev="[3.0.1,3.1[" conf="*->default,provided" />
 
 		<!-- Apache Derby -->
 		<dependency org="org.apache.derby" name="derby" rev="10.6.2.1" conf="*->default" />
@@ -64,6 +62,7 @@
 		<!-- SVNKit -->
 		<dependency org="org.tmatesoft.svnkit" name="svnkit" rev="1.3.5" conf="compile->default"/>
 		
+		<override org="org.datanucleus" module="datanucleus-api-jdo" rev="[3.0.1,3.1[" />
 		
 	</dependencies>
 </ivy-module>
