--- a/.classpath
+++ b/.classpath
@@ -11,20 +11,21 @@
 	<classpathentry kind="lib" path="lib/runtime/commons-email-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/derby-10.6.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/compile/datanucleus-enhancer-3.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/compile/asm-3.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/compile/bookkeeper-0.1-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/compile/datanucleus-api-jdo-3.0.8.jar"/>
-	<classpathentry kind="lib" path="lib/compile/datanucleus-rdbms-3.0.9.jar"/>
 	<classpathentry kind="lib" path="static_lib/selenium-server-standalone-2.22.0.jar"/>
 	<classpathentry kind="lib" path="lib/acceptance/selenium-api-2.21.0.jar"/>
+	<classpathentry kind="lib" path="lib/compile/guice-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/compile/guice-servlet-3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/runtime/jdo-api-3.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/runtime/gwt-user-2.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/runtime/datanucleus-core-3.0.10.jar"/>
 	<classpathentry kind="lib" path="lib/testing/mockito-all-1.9.0.jar"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/testing/selenium-api-2.21.0.jar"/>
 	<classpathentry kind="lib" path="lib/testing/selenium-java-2.21.0.jar"/>
 	<classpathentry kind="lib" path="lib/testing/selenium-remote-driver-2.21.0.jar"/>
+	<classpathentry kind="lib" path="lib/compile/datanucleus-core-3.0.11.jar"/>
+	<classpathentry kind="lib" path="lib/compile/datanucleus-rdbms-3.0.10.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
